--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input class="color1" type="color" name="color1" value="#00ff00">  <!--oninput="setGradient()"-->
     <input class="color2" type="color" name="color2" value="#ff0000">  <!--oninput="setGradient()"-->
     <h2>Current CSS background</h2>
-    <button id="random"> Randomize! </button>
+    <button id="random"> Randomise! </button>
     <h3></h3>
     
     <script type="text/javascript" src="script.js"></script>
